--- a/soda.css
+++ b/soda.css
@@ -25,8 +25,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Sans', sans-serif;
 }
 
-a {
-  color: orange;
+a,
+a:visited,
+a:link {
+  color: orange !important;
 }
 
 /* --------------------------------------------------------- */
